--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/vercel": "^1.4.3",
     "@supabase/supabase-js": "^1.35.3",
     "@vercel/node": "^1.14.0",
+    "lucide-react": "^0.49.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
