--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:css": "tailwindcss -w -i ./app/styles/tailwind.css -o app/styles/app.css  -c ./tailwind.config.cjs"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^4.7.0",
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@remix-run/vercel": "^1.4.3",
