--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.7.0",
+    "@monaco-editor/react": "^4.4.5",
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@remix-run/vercel": "^1.4.3",
     "@supabase/supabase-js": "^1.35.3",
     "@vercel/node": "^1.14.0",
     "lucide-react": "^0.49.0",
+    "monaco-themes": "^0.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
