--- a/jsconfig.json
+++ b/jsconfig.json
@@ -25,6 +25,10 @@
     },
     "noEmit": true,
     "forceConsistentCasingInFileNames": true,
-    "allowJs": true
-  }
+    "allowJs": true,
+  },
+  "exclude": [
+    "node_modules",
+    "**/*.d.ts"
+  ]
 }
