--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lucide-react": "^0.49.0",
     "monaco-themes": "^0.4.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "remix-auth": "^3.2.2",
+    "remix-auth-supabase": "^4.0.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
