--- a/jsconfig.json
+++ b/jsconfig.json
@@ -19,9 +19,9 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": [
+      "app/*": [
         "./app/*"
-      ]
+      ],
     },
     "noEmit": true,
     "forceConsistentCasingInFileNames": true,
