--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "monaco-themes": "^0.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-spinners": "^0.13.3",
     "remix-auth": "^3.2.2",
     "remix-auth-supabase": "^4.0.0"
   },
