--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^1.35.3",
     "@vercel/node": "^1.14.0",
     "lucide-react": "^0.49.0",
+    "marked": "^4.0.18",
     "monaco-themes": "^0.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
