--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@remix-run/vercel": "^1.4.3",
     "@supabase/supabase-js": "^1.35.3",
     "@vercel/node": "^1.14.0",
+    "dexie": "^3.2.2",
     "lucide-react": "^0.49.0",
     "marked": "^4.0.18",
+    "mime": "^3.0.0",
     "monaco-themes": "^0.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-spinners": "^0.13.3",
     "remix-auth": "^3.2.2",
-    "remix-auth-supabase": "^4.0.0"
+    "remix-auth-supabase": "^4.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
