--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-spinners": "^0.13.3",
     "remix-auth": "^3.2.2",
     "remix-auth-supabase": "^4.0.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "uuid": "^8.3.2",
     "xterm": "^4.19.0",
     "xterm-addon-fit": "^0.5.0"
