--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,16 +1,6 @@
 {
-  "include": [
-    "remix.env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
   "compilerOptions": {
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES2019"
-    ],
-    "isolatedModules": true,
+    "lib": ["DOM", "DOM.Iterable", "ES2019"],
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "moduleResolution": "node",
@@ -19,16 +9,13 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "app/*": [
-        "./app/*"
-      ],
+      "app/*": ["./app/*"]
     },
     "noEmit": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
+    "isolatedModules": true
   },
-  "exclude": [
-    "node_modules",
-    "**/*.d.ts"
-  ]
+  "exclude": ["node_modules", "**/*.d.ts"],
+  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"]
 }
