--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.7.2",
+    "@mapbox/rehype-prism": "^0.8.0",
     "@monaco-editor/react": "^4.4.5",
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.6.7",
@@ -27,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-spinners": "^0.13.4",
+    "remark-reading-time": "^2.0.1",
     "remix-auth": "^3.2.2",
     "remix-auth-supabase": "^4.0.0",
     "socket.io": "^4.5.1",
