--- a/.github/workflows/prettier_check_action.yaml
+++ b/.github/workflows/prettier_check_action.yaml
@@ -19,8 +19,8 @@ jobs:
                   # Make sure the value of GITHUB_TOKEN will not be persisted in repo's config
                   persist-credentials: false
 
-            - name: Prettify code
-              uses: creyD/prettier_action@v4.2
-              with:
-                  dry: True
-                  github_token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+            - name: Install npm packages
+              run: npm install --production=false
+
+            - name: Check formatting
+              run: prettier --check .
