--- a/.github/workflows/prettier_check_action.yaml
+++ b/.github/workflows/prettier_check_action.yaml
@@ -23,4 +23,4 @@ jobs:
               run: npm install --production=false
 
             - name: Check formatting
-              run: prettier --check .
+              run: npx prettier --check .
