fix ci by supporting npm legacy deps

--- a/.github/workflows/prettier_check_action.yaml
+++ b/.github/workflows/prettier_check_action.yaml
@@ -20,7 +20,7 @@ jobs:
                   persist-credentials: false
 
             - name: Install npm packages
-              run: npm install --production=false
+              run: npm install --production=false --legacy-peer-deps
 
             - name: Check formatting
               run: npx prettier --check .
