--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
         "format": "npx prettier --write ."
     },
     "dependencies": {
-        "@icons-pack/react-simple-icons": "^5.4.0",
-        "@mapbox/rehype-prism": "^0.7.0",
+        "@icons-pack/react-simple-icons": "^5.5.0",
+        "@mapbox/rehype-prism": "0.7.0",
         "@monaco-editor/react": "^4.4.5",
         "@remix-run/node": "^1.7.0",
         "@remix-run/react": "^1.7.0",
         "@remix-run/vercel": "^1.7.0",
         "@supabase/supabase-js": "^1.35.6",
-        "@vercel/node": "^2.5.11",
+        "@vercel/node": "^2.5.14",
         "dexie": "^3.2.2",
         "lucide-react": "^0.88.0",
         "marked": "^4.1.0",
@@ -35,7 +35,7 @@
         "remix-auth-supabase": "^4.0.0",
         "socket.io": "^4.5.2",
         "socket.io-client": "^4.5.2",
-        "uuid": "^8.3.2",
+        "uuid": "^9.0.0",
         "xterm": "^4.19.0",
         "xterm-addon-fit": "^0.5.0"
     },
@@ -43,9 +43,9 @@
         "@remix-run/dev": "^1.7.0",
         "@remix-run/eslint-config": "^1.7.0",
         "@remix-run/serve": "^1.7.0",
-        "autoprefixer": "^10.4.8",
+        "autoprefixer": "^10.4.10",
         "concurrent": "^0.3.2",
-        "eslint": "^8.23.0",
+        "eslint": "^8.23.1",
         "postcss": "^8.4.16",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
