🚧 add cloudflare remix adapters

--- a/package.json
+++ b/package.json
@@ -5,23 +5,27 @@
     "license": "(MIT OR MPL-2.0 OR CC-BY-SA-4.0)",
     "sideEffects": false,
     "scripts": {
+        "start": "cross-env NODE_ENV=production npm run dev:wrangler",
         "serve": "npm run build:css && npm run build",
         "build": "remix build",
         "build:css": "npm run generate:css -- -m",
-        "dev": "remix dev",
+        "dev:remix": "remix watch",
+        "dev": "remix build && run-p \"dev:*\"",
         "dev:css": "npm run generate:css -- -w ",
+        "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
         "generate:css": "npx tailwindcss -i ./app/styles/tailwind.css -o app/styles/app.css  -c ./tailwind.config.cjs",
         "format": "npx prettier --write ."
     },
     "dependencies": {
+        "@remix-run/cloudflare": "^1.4.3",
+        "@remix-run/cloudflare-pages": "^1.4.3",
+        "cross-env": "^7.0.3",
         "@icons-pack/react-simple-icons": "^5.5.0",
         "@mapbox/rehype-prism": "0.7.0",
         "@monaco-editor/react": "^4.4.5",
         "@remix-run/node": "^1.7.0",
         "@remix-run/react": "^1.7.0",
-        "@remix-run/vercel": "^1.7.0",
         "@supabase/supabase-js": "^1.35.6",
-        "@vercel/node": "^2.5.14",
         "dexie": "^3.2.2",
         "lucide-react": "^0.88.0",
         "marked": "^4.1.0",
@@ -40,6 +44,9 @@
         "xterm-addon-fit": "^0.5.0"
     },
     "devDependencies": {
+        "@cloudflare/workers-types": "^3.14.1",
+        "npm-run-all": "^4.1.5",
+        "wrangler": "^2.0.27",
         "@remix-run/dev": "^1.7.0",
         "@remix-run/eslint-config": "^1.7.0",
         "@remix-run/serve": "^1.7.0",
