--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-        "lib": ["DOM", "DOM.Iterable", "ES2019"],
+        "lib": ["DOM", "DOM.Iterable", "ES2020"],
         "esModuleInterop": true,
         "jsx": "react-jsx",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "target": "ES2019",
+        "target": "ES2020",
         "strict": true,
         "baseUrl": ".",
         "paths": {
@@ -14,8 +14,9 @@
         "noEmit": true,
         "forceConsistentCasingInFileNames": true,
         "allowJs": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "types": ["@cloudflare/workers-types"]
     },
     "exclude": ["node_modules", "**/*.d.ts"],
-    "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"]
+    "include": ["remix.env.d.ts", "**/*.js", "**/*.jsx"]
 }
