--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
         "format": "npx prettier --write ."
     },
     "dependencies": {
-        "@remix-run/cloudflare": "^1.4.3",
-        "@remix-run/cloudflare-pages": "^1.4.3",
-        "cross-env": "^7.0.3",
         "@icons-pack/react-simple-icons": "^5.5.0",
         "@mapbox/rehype-prism": "0.7.0",
         "@monaco-editor/react": "^4.4.5",
+        "@remix-run/cloudflare": "^1.7.0",
+        "@remix-run/cloudflare-pages": "^1.7.0",
         "@remix-run/react": "^1.7.0",
         "@supabase/supabase-js": "^1.35.6",
+        "cross-env": "^7.0.3",
         "dexie": "^3.2.2",
         "lucide-react": "^0.88.0",
         "marked": "^4.1.0",
@@ -34,6 +34,7 @@
         "react-dom": "^17.0.2",
         "react-spinners": "^0.13.4",
         "remark-reading-time": "^2.0.1",
+        "remix": "^1.7.0",
         "remix-auth": "^3.2.2",
         "remix-auth-supabase": "^4.0.0",
         "socket.io": "^4.5.2",
@@ -43,19 +44,19 @@
         "xterm-addon-fit": "^0.5.0"
     },
     "devDependencies": {
-        "@cloudflare/workers-types": "^3.14.1",
-        "npm-run-all": "^4.1.5",
-        "wrangler": "^2.0.27",
+        "@cloudflare/workers-types": "^3.16.0",
         "@remix-run/dev": "^1.7.0",
         "@remix-run/eslint-config": "^1.7.0",
         "@remix-run/serve": "^1.7.0",
         "autoprefixer": "^10.4.10",
         "concurrent": "^0.3.2",
         "eslint": "^8.23.1",
+        "npm-run-all": "^4.1.5",
         "postcss": "^8.4.16",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
-        "tailwindcss": "^3.1.8"
+        "tailwindcss": "^3.1.8",
+        "wrangler": "^2.0.27"
     },
     "engines": {
         "node": ">=16.13"
