--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 # CF Pages/Workers Wrangler config file
-name = "ideoxan-www"
+name = "ideoxan-www-next"
 
 account_id = "fc7469b1bbe987ee5b82926ae054d5f3"
 workers_dev = true
@@ -17,6 +17,8 @@ WORKER_ENV = "development"
 # set them using `wrangler secret put <name>`
 # see https://developers.cloudflare.com/workers/cli-wrangler/commands#secret for more info
 
+[env.production]
+name = "ideoxan-www"
 [env.production.vars]
 WORKER_ENV = "production"
 
