--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,11 @@
 # CF Pages/Workers Wrangler config file
-name = "ideoxan-www-next"
+name = "ideoxan-www"
 
 account_id = "fc7469b1bbe987ee5b82926ae054d5f3"
 workers_dev = true
 
 [vars]
-WORKER_ENV = "development"
+WORKER_ENV = "production"
 # Secrets:
 # - SUPABASE_URL_DEV
 # - SUPABASE_SECRET_KEY_DEV
@@ -17,8 +17,8 @@ WORKER_ENV = "development"
 # set them using `wrangler secret put <name>`
 # see https://developers.cloudflare.com/workers/cli-wrangler/commands#secret for more info
 
-[env.production]
-name = "ideoxan-www"
-[env.production.vars]
-WORKER_ENV = "production"
+[env.dev]
+name = "ideoxan-www-next"
+[env.dev.vars]
+WORKER_ENV = "development"
 
