--- a/.github/workflows/prettier_check_action.yaml
+++ b/.github/workflows/prettier_check_action.yaml
@@ -2,9 +2,9 @@ name: Prettier Check
 
 on:
     pull_request:
-        branches: [main]
+        branches: [main, dev]
     push:
-        branches: [main]
+        branches: [main, dev]
 
 jobs:
     prettier:
