🔨 add concurrently, update build scripts

--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "license": "(MIT OR MPL-2.0 OR CC-BY-SA-4.0)",
     "sideEffects": false,
     "scripts": {
-        "start": "cross-env NODE_ENV=production npm run dev:wrangler",
-        "serve": "npm run build:css && npm run build",
-        "build": "remix build",
-        "build:css": "npm run generate:css -- -m",
+        "build": "npm run build:css && remix build",
+        "build:css": "tailwindcss -m -i ./app/styles/tailwind.css -o ./app/styles/app.css",
         "dev:remix": "remix watch",
-        "dev": "remix build && run-p \"dev:*\"",
-        "dev:css": "npm run generate:css -- -w ",
-        "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public --compatibility-date=2022-08-04",
-        "generate:css": "tailwindcss -i ./app/styles/tailwind.css -o app/styles/app.css  -c ./tailwind.config.cjs",
+        "dev:wrangler": "cross-env NODE_ENV=development npm run wrangler",
+        "dev:css": "tailwindcss -w -i ./app/styles/tailwind.css -o ./app/styles/app.css",
+        "dev": "concurrently \"npm run dev:css\" \"npm run dev:remix\" \"npm run dev:wrangler\"",
+        "start": "cross-env NODE_ENV=production npm run wrangler",
+        "wrangler": "wrangler pages dev ./public --compatibility-date=2022-11-30",
+        "serve": "npm run build:css && npm run build",
         "format": "prettier --write ."
     },
     "dependencies": {
@@ -51,8 +51,8 @@
         "@remix-run/serve": "^1.10.1",
         "autoprefixer": "^10.4.13",
         "concurrent": "^0.3.2",
+        "concurrently": "^7.6.0",
         "eslint": "^8.32.0",
-        "npm-run-all": "^4.1.5",
         "postcss": "^8.4.21",
         "prettier": "^2.8.3",
         "prettier-plugin-tailwindcss": "^0.1.13",
