--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@remix-run/dev": "^1.10.1",
         "@remix-run/eslint-config": "^1.10.1",
         "@remix-run/serve": "^1.10.1",
+        "@tailwindcss/forms": "^0.5.3",
         "autoprefixer": "^10.4.13",
         "concurrent": "^0.3.2",
         "concurrently": "^7.6.0",
